added basic css and wrote logic so nothing changes when the same cell is chosen more than once

--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@
     align-items: center;
     justify-content: center;
 }
+
+.x {
+    background-color: crimson;
+}
+
+.o {
+    background-color: gold;
+}
