--- a/style.css
+++ b/style.css
@@ -1,36 +1,50 @@
 /* Write your CSS Here. */
-* {
+/* * {
     outline: 1px solid crimson;
-}
+} */
 
 #gameView {
-    /*
-    
-    display: flex;
-    */
-    
     box-sizing: border-box;
     height: 200vh;
     width: 200vw;
 }
 
 #gameBoard {
-    height: 40%;
-    width: 40%;
+    height: 30%;
+    width: 30%;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .x {
-    background-color: black;
+    /* background-color: orange; */
+    background-image: url(images/x.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
+
+/* .x::after {
+    content: '';
+    position: absolute;
+    
+    background-repeat: no-repeat;
+    margin: 0 auto;
+} */
 
 .o {
-    background-color: gold;
+    /* background-color: gold; */
+    background-image: url(images/o.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
-th {
-    height: 40%;
-    font-size: 10vh;
-    padding: 0;
+table {
+    table-layout: fixed;
 }
+
+td {
+    outline: 3px solid orangered;
+}
+
